@@ -23,6 +23,7 @@ Eivind Kjørstad <ekj@vestdata.no>		Norwegian Nynorsk translator
 Florian König <floki@bigfoot.com>		German translator
 Wojciech Kotwica <wkotwica@post.pl>		Polish translator
 Clement Laforet <clem_laf@wanadoo.fr>		French translator
+Daniele Medri <madrid@linux.it>			Italian translator
 Gergely Nagy <algernon@debian.org>		Hungarian translator
 Kalle Olavi Niemitalo <kon@iki.fi>		Finnish translator
 A. Murat EREN <meren@comu.edu.tr>		Turkish translator
